passes all fcc tests, would like to fix text overflow and move legend

--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     flex-direction: column;
 }
-#heading {
+#description {
     text-align: center;
     margin-top: 2vh;
     font-weight: normal;
@@ -37,12 +37,13 @@ body {
     align-content: center;
     justify-items: center;
     align-items: center;
-    width: 100px;
-    height: 50px;
+    width: 150px;
+    height: 2em;
     background: gray;
     margin: 10px;
     border-radius: 10px;
     cursor: pointer;
+    margin-bottom: 15px;
 }
 
 .button:hover {
@@ -62,10 +63,10 @@ body {
 }
 
 tspan {
-    -webkit-user-select: none;  /* Chrome all / Safari all */
-    -moz-user-select: none;     /* Firefox all */
-    -ms-user-select: none;      /* IE 10+ */
-    user-select: none;          /* Likely future */  
+    -webkit-user-select: none;  
+    -moz-user-select: none;     
+    -ms-user-select: none;      
+    user-select: none;           
 }
 
 #tooltip {
@@ -77,7 +78,7 @@ tspan {
     border: 1px solid black;
     padding: 5px;
     box-shadow: 2px 2px 5px;
-    transition: .1s;
+    
 }
 
 #tooltip p {
